<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.add_listing.AddListingFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/add_listing_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/background_blue"
                android:paddingLeft="20dp"
                android:textColor="@color/white"
                android:text="@string/upload_add_listing"
                android:textSize="30sp"
                android:textStyle="bold"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"/>

            <TextView
                android:id="@+id/general_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/background_blue_light"
                android:gravity="center"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/upload_info"
                android:textColor="#455A64"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/upload_title"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:autofillHints="" />

            <EditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/upload_description"
                android:inputType="textMultiLine"
                android:lines="3"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textColorHint="#757575"
                android:autofillHints="" />

            <EditText
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPostalAddress"
                android:hint="@string/upload_address"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:autofillHints="" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/floor"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:ems="10"
                    android:inputType="number"
                    android:hint="@string/upload_floor"
                    android:maxLength="2"
                    android:gravity="center"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:autofillHints="" />

                <EditText
                    android:id="@+id/bedrooms"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/upload_bedrooms"
                    android:inputType="number"
                    android:maxLength="2"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:textColorHint="#757575"
                    android:autofillHints="" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/bathrooms"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:ems="10"
                    android:inputType="number"
                    android:hint="@string/upload_bathrooms"
                    android:gravity="center"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:maxLength="2"
                    android:autofillHints="" />

                <EditText
                    android:id="@+id/price"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:digits="0123456789"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/upload_price"
                    android:inputType="phone"
                    android:maxLength="5"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:textColorHint="#757575"
                    android:autofillHints="" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/pet_allowed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/upload_pets"
                    android:textSize="11sp"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"/>

                <CheckBox
                    android:id="@+id/washing_machine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/upload_washing_machine"
                    android:textSize="11sp"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"/>

                <CheckBox
                    android:id="@+id/wifi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/upload_wifi"
                    android:textSize="11sp"
                    android:paddingEnd="20dp"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"/>

                <CheckBox
                    android:id="@+id/near_beach"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/upload_near_beach"
                    android:textSize="11sp"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"/>

            </LinearLayout>


            <TextView
                android:id="@+id/contact_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/background_blue_light"
                android:gravity="center"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/upload_contact_info"
                android:textColor="#455A64"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/contact_name"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:hint="@string/upload_full_name"
                    android:gravity="center"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:autofillHints="" />

                <EditText
                    android:id="@+id/phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/upload_phone_number"
                    android:inputType="phone"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:textColorHint="#757575"
                    android:autofillHints="" />

            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/submit_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/upload_submit"
                    android:textColor="#757575"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:text="@string/upload_notice"
                    android:textSize="15sp"
                    android:gravity="center"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:textStyle="bold"
                    />

                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/subget_logo"
                    android:paddingBottom="40dp"
                    android:visibility="visible"
                    android:contentDescription="@string/todo" />

                <ProgressBar
                    android:id="@+id/upload_progress"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"/>


            </LinearLayout>



        </LinearLayout>
    </ScrollView>




</RelativeLayout>

